@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-22-??
+DATE: 05/23/2023
+STAFF: lec
+wts2-1185/fl2-355/Variant Curation Activity Report
+
 TAG: qcreports_db-6-0-22-43
 DATE: 05/12/2023
 STAFF: lec
